--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.3.1",
     "react-is": "^18.0.0",
     "react-query": "^3.39.3",
+    "react-quiz-component": "^0.5.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
