--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "styled-components": "^5.3.6",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
